preOnboarding code updated